--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,6 +66,8 @@ jobs:
       - name: Run pre-release tests
         run: make pre-release-test
         working-directory: ${{ inputs.working-directory }}
+        env:
+          IMANDRAX_API_KEY: ${{ secrets.IMANDRA_UNIVERSE_API_KEY }}
 
   pypi-publish:
     needs: [build, pre-release-test]
