--- a/packages/imandrax-codegen/Makefile
+++ b/packages/imandrax-codegen/Makefile
@@ -58,54 +58,25 @@ update-all:  ## Update all artifacts and regenerate cram test files
 
 # Clean generated artifacts
 .PHONY: clean-artifacts
-clean:
+clean-artifacts:
 	rm -rf scripts/gen_model_art/result/*
 	rm -rf scripts/gen_fun_decomp_art/result/*
 	rm -rf scripts/gen_decl_art/result/*
 
-# Py
-# ====================
-
-.PHONY: build-py
-build-py:  ## Build Python package
-	rm -rf ./dist/imandrax_codegen-*
-	uv build --no-sources
-
-.PHONY: test-py
-test-py:  ## Run tests for Python package
-	uv run pytest test/python
-
-.PHONY: pre-release-test
-pre-release-test:  ## Run pre-release tests for Python package
-	# uv run pytest test/python
-	true  # disable in CI because we don't target platform outside of MacOS
-
-.PHONY: publish-testpypi
-publish-testpypi: pre-release-test  ## Publish to test.pypi.org
-	uv publish \
-	--publish-url https://test.pypi.org/legacy/ \
-	-u __token__ \
-	-p $$(gcloud secrets versions access --project imandra-dev --secret pypi-test-imandrax-api-api-token latest) \
-	./dist/imandrax_codegen-*
-
-.PHONY: publish-pypi
-publish-pypi: pre-release-test  ## Publish to pypi.org
-	uv publish \
-	--publish-url https://upload.pypi.org/legacy/ \
-	-u __token__ \
-	-p $$(gcloud secrets versions access --project imandra-dev --secret pypi-imandrax-api-api-token latest) \
-	./dist/imandrax_codegen-*
+.PHONY: clean-binaries
+clean-binaries:  ## Clean built binaries
+	rm -rf $(BIN_DIR)
+	rm -rf bin-linux bin-macos  # Legacy directories
 
 # Cross-platform binary builds
 # ====================
 
-LINUX_BIN_DIR := ./bin-linux
-MACOS_BIN_DIR := ./bin-macos
+BIN_DIR := .bin
 
 .PHONY: build-linux-bin
 build-linux-bin:  ## Build Linux binary using Docker
 	@echo "Building Linux binary via Docker..."
-	@mkdir -p $(LINUX_BIN_DIR)
+	@mkdir -p $(BIN_DIR)
 	docker run --rm \
 		-v $(PWD)/../..:/workspace/imandrax-tools \
 		-v $(PWD)/../../../imandrax-api:/workspace/imandrax-api \
@@ -118,38 +89,90 @@ build-linux-bin:  ## Build Linux binary using Docker
 			opam pin add -n imandra-proof-system /workspace/imandrax-api && \
 			opam install . --deps-only -y && \
 			dune build --root=. bin/parse.exe && \
-			cp _build/default/bin/parse.exe bin-linux/art_parse.exe"
-	@echo "Linux binary built at $(LINUX_BIN_DIR)/art_parse.exe"
+			cp _build/default/bin/parse.exe .bin/art_parse-linux-x86_64"
+	@echo "Linux binary built at $(BIN_DIR)/art_parse-linux-x86_64"
 
 .PHONY: build-macos-bin
 build-macos-bin:  ## Build MacOS binary (native)
 	@echo "Building MacOS binary..."
-	@mkdir -p $(MACOS_BIN_DIR)
+	@mkdir -p $(BIN_DIR)
 	dune build bin/parse.exe
-	cp _build/default/bin/parse.exe $(MACOS_BIN_DIR)/art_parse.exe
-	@echo "MacOS binary built at $(MACOS_BIN_DIR)/art_parse.exe"
+	cp _build/default/bin/parse.exe $(BIN_DIR)/art_parse-darwin-arm64
+	@echo "MacOS binary built at $(BIN_DIR)/art_parse-darwin-arm64"
+
+.PHONY: build-binaries
+build-binaries: build-macos-bin build-linux-bin  ## Build all binaries
 
 .PHONY: test-linux-wheel
-test-linux-wheel:  ## Test Linux wheel in Docker
+test-linux-wheel: build-py-linux  ## Build and test Linux wheel in Docker
 	@echo "Testing Linux wheel import..."
-	docker run --rm -v $(PWD):/workspace python:3.12 \
-		bash -c "pip install /workspace/dist/*.whl && python -c 'from imandrax_codegen import art_parse; print(art_parse.CODEGEN_EXE_PATH)'"
+	docker run --rm --platform linux/amd64 -v $(PWD):/workspace python:3.12 \
+		bash -c "pip install /workspace/dist/imandrax_codegen-*-manylinux*.whl && python -c 'from imandrax_codegen import art_parse; print(art_parse.CODEGEN_EXE_PATH)'"
 
-# Binary names for GitHub releases
-LINUX_BIN_NAME := art_parse-linux-x86_64
-MACOS_BIN_NAME := art_parse-darwin-arm64
+# Default release tag for binaries
+BINARY_RELEASE_TAG ?= codegen-binaries
 
+# The --clobber flag in the Makefile means:
+# - First upload: Creates art_parse-linux-x86_64 and art_parse-darwin-arm64 in the
+# codegen-binaries release
+# - Subsequent uploads: Overwrites the existing binaries with the new ones
 .PHONY: upload-linux-bin
-upload-linux-bin:  ## Upload Linux binary to GitHub release (requires RELEASE_TAG)
-	@if [ -z "$(RELEASE_TAG)" ]; then echo "Error: RELEASE_TAG is required"; exit 1; fi
-	@echo "Uploading Linux binary to release $(RELEASE_TAG)..."
-	gh release upload $(RELEASE_TAG) $(LINUX_BIN_DIR)/art_parse.exe#$(LINUX_BIN_NAME) --clobber
+upload-linux-bin:  ## Upload Linux binary to GitHub release (uses BINARY_RELEASE_TAG, default: codegen-binaries)
+	@echo "Uploading Linux binary to release $(BINARY_RELEASE_TAG)..."
+	gh release upload $(BINARY_RELEASE_TAG) $(BIN_DIR)/art_parse-linux-x86_64 --clobber
 
 .PHONY: upload-macos-bin
-upload-macos-bin:  ## Upload MacOS binary to GitHub release (requires RELEASE_TAG)
-	@if [ -z "$(RELEASE_TAG)" ]; then echo "Error: RELEASE_TAG is required"; exit 1; fi
-	@echo "Uploading MacOS binary to release $(RELEASE_TAG)..."
-	gh release upload $(RELEASE_TAG) $(MACOS_BIN_DIR)/art_parse.exe#$(MACOS_BIN_NAME) --clobber
+upload-macos-bin:  ## Upload MacOS binary to GitHub release (uses BINARY_RELEASE_TAG, default: codegen-binaries)
+	@echo "Uploading MacOS binary to release $(BINARY_RELEASE_TAG)..."
+	gh release upload $(BINARY_RELEASE_TAG) $(BIN_DIR)/art_parse-darwin-arm64 --clobber
 
 .PHONY: upload-binaries
 upload-binaries: upload-linux-bin upload-macos-bin  ## Upload all binaries to GitHub release
+
+# Py
+# ====================
+
+.PHONY: build-py-macos
+build-py-macos: build-macos-bin  ## Build macOS wheel locally
+		@echo "Building macOS wheel..."
+		rm -rf ./dist/imandrax_codegen-*
+		cp $(BIN_DIR)/art_parse-darwin-arm64 python/imandrax_codegen/art_parse.exe
+		uv build --wheel
+		@echo "Retagging wheel for macOS..."
+		uv tool run wheel tags --platform-tag macosx_11_0_arm64 --remove dist/*.whl
+		@echo "macOS wheel built: $$(ls dist/*.whl)"
+
+.PHONY: build-py-linux
+build-py-linux:  ## Build Linux wheel locally
+		@echo "Building Linux wheel..."
+		rm -rf ./dist/imandrax_codegen-*
+		cp $(BIN_DIR)/art_parse-linux-x86_64 python/imandrax_codegen/art_parse.exe
+		uv build --wheel
+		@echo "Retagging wheel for Linux..."
+		uv tool run wheel tags --platform-tag manylinux_2_17_x86_64 --remove dist/*.whl
+		@echo "Linux wheel built: $$(ls dist/*.whl)"
+
+.PHONY: test-py
+test-py:  ## Run tests for Python package
+		uv run pytest test/python
+
+.PHONY: pre-release-test
+pre-release-test:  ## Run pre-release tests for Python package
+		# uv run pytest test/python
+		true  # disable in CI because we don't target platform outside of MacOS
+
+.PHONY: publish-testpypi
+publish-testpypi: pre-release-test  ## Publish to test.pypi.org
+		uv publish \
+		--publish-url https://test.pypi.org/legacy/ \
+		-u __token__ \
+		-p $$(gcloud secrets versions access --project imandra-dev --secret pypi-test-imandrax-api-api-token latest) \
+		./dist/imandrax_codegen-*
+
+.PHONY: publish-pypi
+publish-pypi: pre-release-test  ## Publish to pypi.org
+		uv publish \
+		--publish-url https://upload.pypi.org/legacy/ \
+		-u __token__ \
+		-p $$(gcloud secrets versions access --project imandra-dev --secret pypi-imandrax-api-api-token latest) \
+		./dist/imandrax_codegen-*
