TEMP,CI: triggered on push

--- a/.github/workflows/build-codegen-windows.yml
+++ b/.github/workflows/build-codegen-windows.yml
@@ -2,6 +2,9 @@
 name: build-codegen-windows
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - hy/support-windows-for-codegen  # TODO: remove after testing
 
 jobs:
   build:
