--- a/packages/imandrax-codegen/lib/dune
+++ b/packages/imandrax-codegen/lib/dune
@@ -2,7 +2,8 @@
 
 (library
  (name imandrax_codegen)
- (flags (:standard -w -30))
+ (flags
+  (:standard -w -30))
  (libraries
   imandrax-api
   imandrax-api.artifact
