WIP: SIR term of MIR

--- a/packages/imandrax-codegen/lib/parser/python/dune
+++ b/packages/imandrax-codegen/lib/parser/python/dune
@@ -1,8 +1,10 @@
 (library
  (name py_parser)
  (libraries
-  semantic_ir containers
+  semantic_ir
+  containers
   parser
+  python_adapter
  )
  (inline_tests)
  (flags
