--- a/packages/imandrax-codegen/lib/semantic_ir/dune
+++ b/packages/imandrax-codegen/lib/semantic_ir/dune
@@ -2,6 +2,7 @@
 
 (library
  (name semantic_ir)
+ (public_name imandrax-codegen.semantic_ir)
  (libraries)
  (preprocess
   (pps ppx_deriving.show ppx_deriving.eq ppx_deriving_yojson)))
