switch CLI to new ver

--- a/packages/imandrax-codegen/bin/dune
+++ b/packages/imandrax-codegen/bin/dune
@@ -6,6 +6,7 @@
  (modules parse)
  (libraries
   imandrax_codegen
+  imandrax-codegen.adapters.python
   imandrax-api
   imandrax-api.mir
   imandrax-api.artifact
