--- a/packages/imandrax-codegen/lib/semantic_ir/dune
+++ b/packages/imandrax-codegen/lib/semantic_ir/dune
@@ -1,8 +1,18 @@
-(include_subdirs no)
+(include_subdirs qualified)
 
 (library
  (name semantic_ir)
  (public_name imandrax-codegen.semantic_ir)
- (libraries)
+ (libraries
+  imandrax-api
+  imandrax-api.artifact
+  imandrax-api.mir
+  imandrakit
+  imandrakit.twine
+  containers
+  yaml)
+ (inline_tests)
+ (flags
+  (:standard -w -33))
  (preprocess
-  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving_yojson)))
+  (pps ppx_expect ppx_deriving.show ppx_deriving.eq ppx_deriving_yojson)))
