--- a/packages/imandrax-codegen/lib/semantic_ir/dune
+++ b/packages/imandrax-codegen/lib/semantic_ir/dune
@@ -11,8 +11,7 @@
   imandrakit.twine
   containers
   yaml)
- (inline_tests)
  (flags
   (:standard -w -33))
  (preprocess
-  (pps ppx_expect ppx_deriving.show ppx_deriving.eq ppx_deriving_yojson)))
+  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving_yojson)))
