--- a/packages/imandrax-codegen/test/expect-test/model/dune
+++ b/packages/imandrax-codegen/test/expect-test/model/dune
@@ -15,4 +15,5 @@
  (inline_tests
   (deps
    (source_tree ../../data)))
- (preprocess (pps ppx_expect ppx_deriving.show ppx_deriving_yojson)))
+ (preprocess
+  (pps ppx_expect ppx_deriving.show ppx_deriving_yojson)))
