--- a/packages/imandrax-codegen/dune
+++ b/packages/imandrax-codegen/dune
@@ -1,6 +1,8 @@
 ; Include subdirectories for library and binaries
+
 (dirs lib bin test examples python)
 
 (alias
  (name default)
- (deps (alias_rec python-setup)))
+ (deps
+  (alias_rec python-setup)))
