--- a/packages/imandrax-codegen/test/dune
+++ b/packages/imandrax-codegen/test/dune
@@ -15,6 +15,7 @@
  (inline_tests
   (deps
    (source_tree data)))
- (preprocess (pps ppx_expect ppx_deriving.show ppx_deriving_yojson)))
+ (preprocess
+  (pps ppx_expect ppx_deriving.show ppx_deriving_yojson)))
 
 (data_only_dirs data)
