--- a/packages/imandrax-codegen/lib/semantic_ir/dune
+++ b/packages/imandrax-codegen/lib/semantic_ir/dune
@@ -4,14 +4,12 @@
  (name semantic_ir)
  (public_name imandrax-codegen.semantic_ir)
  (libraries
-  imandrax-api
   imandrax-api.artifact
   imandrax-api.mir
-  imandrakit
-  imandrakit.twine
   containers
-  yaml)
+  yaml
+  sexplib)
  (flags
   (:standard -w -33))
  (preprocess
-  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving_yojson)))
+  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving_yojson ppx_sexp_conv)))
