TEST: setup cinaps

--- a/packages/imandrax-codegen/test/expect-test/ts-model/dune
+++ b/packages/imandrax-codegen/test/expect-test/ts-model/dune
@@ -9,3 +9,9 @@
    (source_tree ../../data)))
  (preprocess
   (pps ppx_expect ppx_deriving.show ppx_deriving_yojson)))
+
+(cinaps
+  (files test_primitive.ml)
+  (preprocess
+   (pps ppx_string))
+  )
