TEST: full ts model tests

--- a/packages/imandrax-codegen/test/expect-test/ts-model/dune
+++ b/packages/imandrax-codegen/test/expect-test/ts-model/dune
@@ -11,7 +11,7 @@
   (pps ppx_expect ppx_deriving.show ppx_deriving_yojson)))
 
 (cinaps
-  (files test_primitive.ml)
+  (files test.ml)
   (preprocess
    (pps ppx_string))
   )
