--- a/packages/imandrax-codegen/test/expect-test/ts-model/dune
+++ b/packages/imandrax-codegen/test/expect-test/ts-model/dune
@@ -5,7 +5,7 @@
   (deps
    (source_tree ../../data)))
  (preprocess
-  (pps ppx_expect ppx_deriving.show ppx_deriving_yojson)))
+  (pps ppx_expect ppx_string)))
 
 (cinaps
  (files test.ml)
