FIX,TEST(e2e): art data path changes

--- a/packages/imandrax-codegen/test/e2e/python/dune
+++ b/packages/imandrax-codegen/test/e2e/python/dune
@@ -1,7 +1,7 @@
 (cram
  (deps
   %{bin:py-gen-parse}
-  (source_tree ../data)
+  (source_tree ../../../data)
   ../../../pyproject.toml
   ../../../uv.lock
   ../../../README.md
