--- a/packages/imandrax-codegen/lib/adapters/python/dune
+++ b/packages/imandrax-codegen/lib/adapters/python/dune
@@ -9,4 +9,4 @@
  (flags
   (:standard -w -33))
  (preprocess
-  (pps ppx_expect ppx_deriving.show ppx_deriving.eq ppx_deriving_yojson)))
+  (pps ppx_expect ppx_deriving.show ppx_deriving.eq ppx_deriving_yojson ppx_sexp_conv)))
