--- a/packages/imandrax-codegen/lib/semantic_ir/dune
+++ b/packages/imandrax-codegen/lib/semantic_ir/dune
@@ -9,7 +9,8 @@
   containers
   yaml
   sexplib)
+ (inline_tests)
  (flags
   (:standard -w -33))
  (preprocess
-  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving_yojson ppx_sexp_conv)))
+  (pps ppx_expect ppx_deriving.show ppx_deriving.eq ppx_deriving_yojson ppx_sexp_conv)))
