cli: support lang option

--- a/packages/imandrax-codegen/bin/dune
+++ b/packages/imandrax-codegen/bin/dune
@@ -8,6 +8,7 @@
  (libraries
   imandrax_codegen
   imandrax-codegen.adapters.python
+  imandrax-codegen.adapters.typescript
   imandrax-api
   imandrax-api.mir
   imandrax-api.artifact
