--- a/packages/imandrax-codegen/imandrax-codegen.opam
+++ b/packages/imandrax-codegen/imandrax-codegen.opam
@@ -14,6 +14,7 @@ depends: [
   "base64" {>= "3.0"}
   "fmt" {>= "0.8"}
   "imandrakit"
+  "sexplib"
   "ppx_deriving"
   "ppx_deriving_yojson"
   "ppx_expect"
