CI: enable python pre-release-test

--- a/packages/imandrax-codegen/Makefile
+++ b/packages/imandrax-codegen/Makefile
@@ -188,8 +188,7 @@ test-py:  ## Run tests for Python package
 
 .PHONY: pre-release-test
 pre-release-test:  ## Run pre-release tests for Python package
-		# uv run pytest test/python
-		true  # disable in CI because we don't target platform outside of MacOS
+		uv run pytest test/python
 
 .PHONY: publish-testpypi
 publish-testpypi: pre-release-test  ## Publish to test.pypi.org
