--- a/packages/imandrax-api-models/pyproject.toml
+++ b/packages/imandrax-api-models/pyproject.toml
@@ -36,6 +36,7 @@ dev = [
     "ipykernel>=7.1.0",
     "pdbpp>=0.11.7",
     "pytest>=9.0.1",
+    "pytest-retry>=1.7.0",
     "pyyaml>=6.0.3",
 ]
 
